--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Compiled class file
 *.class
+bin/
+target/*
 
 # Log file
 *.log
+logs/
 
 # BlueJ files
 *.ctxt
@@ -20,3 +23,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# User-specific stuff:
+.idea/*
